[package]
name = "mcconfsort"
description = "Sort contents of JSON and TOML files, recursively inside a directory"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = { git = "https://github.com/qwertz19281/toml", rev = "f9cae372" }
serde_jsonrc = { git = "https://github.com/qwertz19281/serde-jsonrc", rev = "dab008c8", features = ["preserve_order","arbitrary_precision"] }
anyhow = "1"
walkdir = "2.3"
clap = { version = "4", features = ["derive"] }
