[package]
name = "mcconfsort"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = { path = "../toml_edit" }
anyhow = "1"
walkdir = "2.3"
serde_jsonrc = { path = "../serde_jsonrc", features = ["preserve_order","arbitrary_precision"] }
